syntax = "proto3";

package agentstreamproto;

message ClientMessage {
    uint64 id = 1;
    oneof message_type {
        AckResponse    ack_response    = 2;
        NoopRequest    noop_request    = 3;
        StartupRequest startup_request = 4;
        ErrorResponse  error_response  = 5;
    }
}

message ServerMessage {
    uint64 id = 1;
    oneof message_type {
        AckResponse                           ack_response   = 2;
        NoopRequest                           noop_request   = 3;
        ErrorResponse                         error_response = 4;
        ClaimRequest                          claim_request  = 5;
        ConfigChangedRequest                  config_changed_request = 6;
        EmailcdnTestAccountCredentialsRequest emailcdn_test_account_credentials_request = 7;
    }
}

message AckResponse {
}

message ClaimRequest {
    string token = 1;
}

message ConfigChangedRequest {
    map<string,bytes> hashes_by_table = 1;
}

message EmailcdnAccount {
    string id            = 1;
    string provider      = 2;
    string email         = 3;
    string imap_host     = 4;
    uint32 imap_port     = 5;
    string imap_username = 6;
    string imap_password = 7;
    string smtp_host     = 8;
    uint32 smtp_port     = 9;
    string smtp_username = 10;
    string smtp_password = 11;
    bool ssl_required    = 12;
}

message EmailcdnTestAccountCredentialsRequest {
    EmailcdnAccount account = 1;
}

message ErrorResponse {
    string error = 1;
}

message NoopRequest {
}

message StartupRequest {
}
